--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -11,7 +11,9 @@
     <div class="p-3 py-4 px-md-4 bg-white border-bottom box-shadow">
         <div class="container">
             <div class="d-flex flex-column flex-md-row align-items-center">
-                <h5 class="my-0 mr-md-auto font-weight-normal logo"><a href="/">Raysmond</a></h5>
+                <h5 class="my-0 mr-md-auto font-weight-normal logo">
+                    <a href="/" th:text="${@App.getSiteName()}"></a>
+                </h5>
                 <nav class="my-2 my-md-0 mr-md-3 topbar">
                     <a class="p-2 " href="/">首页</a>
                     <a class="p-2 " href="/posts/archive">归档</a>
