--- a/src/main/resources/templates/tags/index.html
+++ b/src/main/resources/templates/tags/index.html
@@ -3,6 +3,7 @@
       layout:decorator="layout/bootstrap4">
 <head>
     <meta charset="UTF-8">
+    <title th:text="${@viewHelper.metaTitle('标签')}"></title>
 </head>
 <body>
 <div layout:fragment="content">
