--- a/src/main/resources/templates/tags/index.html
+++ b/src/main/resources/templates/tags/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="page-title text-center py-3">Tags</h1>
+    <h1 class="page-title text-center py-3">标签</h1>
 
     <div class="tags">
         <button type="button" class="btn btn-outline-secondary"
