--- a/src/main/resources/templates/posts/archive.html
+++ b/src/main/resources/templates/posts/archive.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h1 class="page-title text-center py-3">Posts Archive</h1>
+    <h1 class="page-title text-center py-3">文章归档</h1>
 
     <div class="post-archive">
         <div th:each="archive: ${posts}">
